js/src/tests/test262/built-ins/Error/prototype/S15.11.4_A4.js
try
{
var
__instance
=
new
Error
.
prototype
;
ERROR
(
'
#
1
:
"
var
__instance
=
new
Error
.
prototype
"
lead
to
throwing
exception
'
)
;
}
catch
(
e
)
{
if
(
e
instanceof
Test262Error
)
throw
e
;
}
reportCompare
(
0
0
)
;
